cfn_benchmark/cfn_templates/devenes__dynamic-volume-provisionining-and-ingress/eksctl-devenes-cluster-cluster.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  EKS cluster (dedicated VPC: true, dedicated IAM: true) [created and managed by
  eksctl]
Mappings:
  ServicePrincipalPartitionMap:
    aws:
      EC2: ec2.amazonaws.com
      EKS: eks.amazonaws.com
      EKSFargatePods: eks-fargate-pods.amazonaws.com
    aws-cn:
      EC2: ec2.amazonaws.com.cn
      EKS: eks.amazonaws.com
      EKSFargatePods: eks-fargate-pods.amazonaws.com
    aws-us-gov:
      EC2: ec2.amazonaws.com
      EKS: eks.amazonaws.com
      EKSFargatePods: eks-fargate-pods.amazonaws.com
Resources:
  ClusterSharedNodeSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Communication between all nodes in the cluster
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/ClusterSharedNodeSecurityGroup"
      VpcId: !Ref VPC
  ControlPlane:
    Type: "AWS::EKS::Cluster"
    Properties:
      KubernetesNetworkConfig:
        IpFamily: ipv4
      Name: devenes-cluster
      ResourcesVpcConfig:
        EndpointPrivateAccess: false
        EndpointPublicAccess: true
        SecurityGroupIds:
          - !Ref ControlPlaneSecurityGroup
        SubnetIds:
          - !Ref SubnetPublicUSEAST1A
          - !Ref SubnetPublicUSEAST1B
          - !Ref SubnetPublicUSEAST1C
          - !Ref SubnetPrivateUSEAST1A
          - !Ref SubnetPrivateUSEAST1B
          - !Ref SubnetPrivateUSEAST1C
      RoleArn: !GetAtt
        - ServiceRole
        - Arn
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/ControlPlane"
      Version: "1.22"
  ControlPlaneSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Communication between the control plane and worker nodegroups
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/ControlPlaneSecurityGroup"
      VpcId: !Ref VPC
  IngressDefaultClusterToNodeSG:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: >-
        Allow managed and unmanaged nodes to communicate with each other (all
        ports)
      FromPort: 0
      GroupId: !Ref ClusterSharedNodeSecurityGroup
      IpProtocol: "-1"
      SourceSecurityGroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      ToPort: 65535
  IngressInterNodeGroupSG:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: Allow nodes to communicate with each other (all ports)
      FromPort: 0
      GroupId: !Ref ClusterSharedNodeSecurityGroup
      IpProtocol: "-1"
      SourceSecurityGroupId: !Ref ClusterSharedNodeSecurityGroup
      ToPort: 65535
  IngressNodeToDefaultClusterSG:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: Allow unmanaged nodes to communicate with control plane (all ports)
      FromPort: 0
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      IpProtocol: "-1"
      SourceSecurityGroupId: !Ref ClusterSharedNodeSecurityGroup
      ToPort: 65535
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/InternetGateway"
  NATGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt
        - NATIP
        - AllocationId
      SubnetId: !Ref SubnetPublicUSEAST1A
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/NATGateway"
  NATIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/NATIP"
  NATPrivateSubnetRouteUSEAST1A:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
      RouteTableId: !Ref PrivateRouteTableUSEAST1A
  NATPrivateSubnetRouteUSEAST1B:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
      RouteTableId: !Ref PrivateRouteTableUSEAST1B
  NATPrivateSubnetRouteUSEAST1C:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
      RouteTableId: !Ref PrivateRouteTableUSEAST1C
  PolicyCloudWatchMetrics:
    Type: "AWS::IAM::Policy"
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - "cloudwatch:PutMetricData"
            Effect: Allow
            Resource: "*"
        Version: 2012-10-17
      PolicyName: !Sub "${AWS::StackName}-PolicyCloudWatchMetrics"
      Roles:
        - !Ref ServiceRole
  PolicyELBPermissions:
    Type: "AWS::IAM::Policy"
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - "ec2:DescribeAccountAttributes"
              - "ec2:DescribeAddresses"
              - "ec2:DescribeInternetGateways"
            Effect: Allow
            Resource: "*"
        Version: 2012-10-17
      PolicyName: !Sub "${AWS::StackName}-PolicyELBPermissions"
      Roles:
        - !Ref ServiceRole
  PrivateRouteTableUSEAST1A:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/PrivateRouteTableUSEAST1A"
      VpcId: !Ref VPC
  PrivateRouteTableUSEAST1B:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/PrivateRouteTableUSEAST1B"
      VpcId: !Ref VPC
  PrivateRouteTableUSEAST1C:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/PrivateRouteTableUSEAST1C"
      VpcId: !Ref VPC
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/PublicRouteTable"
      VpcId: !Ref VPC
  PublicSubnetRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
    DependsOn:
      - VPCGatewayAttachment
  RouteTableAssociationPrivateUSEAST1A:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTableUSEAST1A
      SubnetId: !Ref SubnetPrivateUSEAST1A
  RouteTableAssociationPrivateUSEAST1B:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTableUSEAST1B
      SubnetId: !Ref SubnetPrivateUSEAST1B
  RouteTableAssociationPrivateUSEAST1C:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTableUSEAST1C
      SubnetId: !Ref SubnetPrivateUSEAST1C
  RouteTableAssociationPublicUSEAST1A:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SubnetPublicUSEAST1A
  RouteTableAssociationPublicUSEAST1B:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SubnetPublicUSEAST1B
  RouteTableAssociationPublicUSEAST1C:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SubnetPublicUSEAST1C
  ServiceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service:
                - !FindInMap
                  - ServicePrincipalPartitionMap
                  - !Ref "AWS::Partition"
                  - EKS
        Version: 2012-10-17
      ManagedPolicyArns:
        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSClusterPolicy"
        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSVPCResourceController"
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/ServiceRole"
  SubnetPrivateUSEAST1A:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 192.168.96.0/19
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPrivateUSEAST1A"
      VpcId: !Ref VPC
  SubnetPrivateUSEAST1B:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 192.168.128.0/19
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPrivateUSEAST1B"
      VpcId: !Ref VPC
  SubnetPrivateUSEAST1C:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-1c
      CidrBlock: 192.168.160.0/19
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPrivateUSEAST1C"
      VpcId: !Ref VPC
  SubnetPublicUSEAST1A:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 192.168.0.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPublicUSEAST1A"
      VpcId: !Ref VPC
  SubnetPublicUSEAST1B:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 192.168.32.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPublicUSEAST1B"
      VpcId: !Ref VPC
  SubnetPublicUSEAST1C:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-1c
      CidrBlock: 192.168.64.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPublicUSEAST1C"
      VpcId: !Ref VPC
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 192.168.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/VPC"
  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
Outputs:
  ARN:
    Value: !GetAtt
      - ControlPlane
      - Arn
    Export:
      Name: !Sub "${AWS::StackName}::ARN"
  CertificateAuthorityData:
    Value: !GetAtt
      - ControlPlane
      - CertificateAuthorityData
  ClusterSecurityGroupId:
    Value: !GetAtt
      - ControlPlane
      - ClusterSecurityGroupId
    Export:
      Name: !Sub "${AWS::StackName}::ClusterSecurityGroupId"
  ClusterStackName:
    Value: !Ref "AWS::StackName"
  Endpoint:
    Value: !GetAtt
      - ControlPlane
      - Endpoint
    Export:
      Name: !Sub "${AWS::StackName}::Endpoint"
  FeatureNATMode:
    Value: Single
  SecurityGroup:
    Value: !Ref ControlPlaneSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}::SecurityGroup"
  ServiceRoleARN:
    Value: !GetAtt
      - ServiceRole
      - Arn
    Export:
      Name: !Sub "${AWS::StackName}::ServiceRoleARN"
  SharedNodeSecurityGroup:
    Value: !Ref ClusterSharedNodeSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}::SharedNodeSecurityGroup"
  SubnetsPrivate:
    Value: !Join
      - ","
      - - !Ref SubnetPrivateUSEAST1A
        - !Ref SubnetPrivateUSEAST1B
        - !Ref SubnetPrivateUSEAST1C
    Export:
      Name: !Sub "${AWS::StackName}::SubnetsPrivate"
  SubnetsPublic:
    Value: !Join
      - ","
      - - !Ref SubnetPublicUSEAST1A
        - !Ref SubnetPublicUSEAST1B
        - !Ref SubnetPublicUSEAST1C
    Export:
      Name: !Sub "${AWS::StackName}::SubnetsPublic"
  VPC:
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}::VPC"
